--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,21 @@
-os: osx
 language: python
 python:
   - 2.7
 install:
-  # Install glfw3
-  - brew install glfw3
-  #
-  # - sudo apt-get install cmake xorg-dev libglu1-mesa-dev libglfw3-dev texlive-xetex texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended pandoc imagemagick
-  # - # Install glfw
-  # - git clone https://github.com/glfw/glfw.git ~/glfw
-  # - cd ~/glfw
-  # - cmake .
-  # - make
-  # - sudo make install
-  # - cd -
-  #
+  - sudo apt-get install cmake xorg-dev libglu1-mesa-dev texlive-xetex texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended pandoc imagemagick
+  - # Install glfw
+  - git clone https://github.com/glfw/glfw.git ~/glfw
+  - cd ~/glfw
+  - cmake .
+  - make
+  - sudo make install
+  - cd -
   - # Install glslViewer
   - git clone http://github.com/patriciogonzalezvivo/glslViewer ~/glslViewer
   - cd ~/glslViewer
   - make
   - sudo make install
   - cd -
-  # basictex & mactex
-  - brew install pandoc python2.7
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
@@ -30,3 +23,4 @@ before_script:
   - rm -rf 12 13 14 15 16 17 18 # ugly ...
 script:
   - make && [ -e book.pdf ]
+  - ls
