--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 os: 
   - osx
 install:
-  - brew install pandoc python2.7
+  # - brew install pandoc python2.7
   #- sudo apt-get install cmake xorg-dev libglu1-mesa-dev texlive-xetex texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended pandoc imagemagick
   - # Install glfw
   - brew install glfw3
