--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 dist: 
   - xenial
 install:
-  - sudo apt-get install cmake xorg-dev libglu1-mesa-dev texlive-xetex texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended pandoc imagemagick glfw3 git-core
+  - sudo apt-get install cmake xorg-dev libglu1-mesa-dev texlive-xetex texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended pandoc imagemagick libglfw3-dev git-core
   - # Install glfw
   - git clone https://github.com/glfw/glfw.git ~/glfw
   - cd ~/glfw
