--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,9 @@ install:
   - sudo make install
   - cd -
 before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-  - sleep 3 # give xvfb some time to start
-  - rm -rf 12 13 14 15 16 17 18 # ugly ...
+  - #export DISPLAY=:99.0
+  - #sh -e /etc/init.d/xvfb start
+  - #sleep 3 # give xvfb some time to start
+  - #rm -rf 12 13 14 15 16 17 18 # ugly ...
 script:
   - make && [ -e book.pdf ]
