--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ python:
   - 2.7
 dist: 
   - xenial
+services:
+  - xvfb
 install:
   - sudo apt-get install cmake xorg-dev libglu1-mesa-dev texlive-xetex texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended pandoc imagemagick libglfw3-dev git-core
   - # Install glfw
@@ -20,7 +22,7 @@ install:
   - cd -
 before_script:
   - #export DISPLAY=:99.0
-  - #sh -e /etc/init.d/xvfb start
+  - xvfb-run
   - #sleep 3 # give xvfb some time to start
   - #rm -rf 12 13 14 15 16 17 18 # ugly ...
 script:
