--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_script:
   - #sleep 3 # give xvfb some time to start
   - #rm -rf 12 13 14 15 16 17 18 # ugly ...
 script:
-  - make && [ -e book.pdf ]
+  - make
   - ls
 deploy:
   provider: releases
