--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_script:
   - #export DISPLAY=:99.0
   - #xvfb-run
   - #sleep 3 # give xvfb some time to start
-  - #rm -rf 12 13 14 15 16 17 18 # ugly ...
+  - rm -rf 12 13 14 15 16 17 18 # ugly ...
 script:
   - travis_wait make
   - ls
